[gd_scene load_steps=18 format=3 uid="uid://cg30f4111qwxg"]

[ext_resource type="Texture2D" uid="uid://dn0nynch4ydr6" path="res://space sprite/saw_activate.png" id="1_mvg7s"]
[ext_resource type="Script" uid="uid://b5ibqepxnw8c7" path="res://script-obstacles/saw_space.gd" id="1_ysjl1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mvg7s"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysjl1"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn4ii"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hha5"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n5t4"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45ggu"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7605"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiwfc"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xqb3"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul00j"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k8of"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdbfk"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvirc"]
atlas = ExtResource("1_mvg7s")
region = Rect2(0, 384, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uhesh"]
animations = [{
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_mvg7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysjl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn4ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hha5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n5t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45ggu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7605")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiwfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xqb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul00j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k8of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdbfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvirc")
}],
"loop": true,
"name": &"saw_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bn4ii"]
radius = 22.0

[node name="saw_space" type="Node2D"]
script = ExtResource("1_ysjl1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -4)
scale = Vector2(1.5, 1.34375)
sprite_frames = SubResource("SpriteFrames_uhesh")
animation = &"saw_animation"
autoplay = "saw_animation"
frame = 4
frame_progress = 0.255048

[node name="saw_killzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="saw_killzone"]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_bn4ii")

[node name="saw_timer" type="Timer" parent="saw_killzone"]
wait_time = 0.8
one_shot = true

[connection signal="body_entered" from="saw_killzone" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="saw_killzone/saw_timer" to="." method="_on_timer_timeout"]
